# Cevy

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: units-tests.yml
assets/engine/shaders/: deferred.vert  deferred_accumulate.frag  deferred_compose.frag  gbuffer.frag  simple.frag  simple.vert
docs/: Getting Started.md
examples/: README.md  readme.md
examples/basic/: CMakeLists.txt  Makefile  basic.cpp
examples/bunny/: CMakeLists.txt  bunny.cpp
examples/sphere/: CMakeLists.txt
shaders/: deferred.frag  deferred.vert  gbuffer.frag  simple.frag  simple.vert
src/: CMakeLists.txt  any_nc.hpp  cevy.cpp  cevy.hpp
src/ecs/: App.hpp  CMakeLists.txt  Entity.hpp  Event.hpp  Factory.hpp  Indirect.hpp  Plugin.hpp  Query.hpp  Resource.hpp  Scheduler.hpp  SparseVector.cpp  SparseVector.hpp  World.hpp  ecs.hpp
src/ecs/commands/: CMakeLists.txt  Command.hpp  Commands.cpp  Commands.hpp  EntityCommands.hpp
src/engine/: CMakeLists.txt  Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  EnginePlugin.hpp  PhysicsProps.hpp  Pointer.hpp  Target.hpp  Transform.hpp  Velocity.hpp  Window.hpp  cursor.hpp  engine.hpp  glWindow.cpp  glWindow.hpp  glx.hpp  input.hpp
src/engine/assets/: Asset.hpp  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Diffuse.hpp  Handle.hpp  Mesh.hpp  Model.cpp  Model.hpp  PbrMaterial.cpp  PbrMaterial.hpp  ShaderProgram.hpp  primitives.cpp  stb_image.h  tinyobj_loader_opt.h
src/engine/editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  EditorWindow.hpp  GameWindow.cpp  GameWindow.hpp
src/engine/input/: CMakeLists.txt  input.cpp  input.hpp  state.hpp
src/engine/math/: CMakeLists.txt  Vector.cpp  Vector.hpp
src/engine/rendering/: Atmosphere.cpp  Atmosphere.hpp  CMakeLists.txt  ClearColor.cpp  ClearColor.hpp  Color.cpp  Color.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  Line.hpp  PointLight.hpp  pipeline.hpp  rendering.cpp  rendering.hpp
src/engine/rendering/deferred/: Billboard.hpp  GBuffers.hpp
src/network/: CMakeLists.txt  CevyNetwork.hpp  NetworkActions.hpp  NetworkBase.hpp  NetworkCommands.hpp  NetworkPlugin.cpp  NetworkPlugin.hpp  Synchroniser.hpp  network.hpp
src/physics/: CMakeLists.txt  Physics.cpp
src/physics/collision/: CMakeLists.txt  Collider.cpp  Collider.hpp  EntitiesCollision.cpp  Shape.hpp
